# highperf-server

./: .gitignore  CMakeLists.txt  README.md  server_build_and_excute.sh
.cache/clangd/index/: ConnectionManager.h.8A6A67242B07ECBA.idx  CyberpunkTaverna.cpp.2D4E3ADE817CC4E8.idx  EventHandler.cpp.D16CF5C1C0965FBC.idx  EventHandler.h.A2A48D7DAF4AE245.idx  LogBuffer.cpp.A9BB91C7F8A5592B.idx  LogBuffer.h.F2EA55FFAB8829D0.idx  LogFile.h.3423D93822D3C6F7.idx  LogFlusher.h.487D5714E0578207.idx  LogPub.cpp.B2A8B9E1B8B80AF4.idx  LogPub.h.82481736E843CC2A.idx  LogTest.cpp.130056012FE12C04.idx  Logger.h.4DB0AA0712149421.idx  RequestBuffer.h.4DD89ECE0DC4FAAC.idx  Server.cpp.B5D12B921BC06D7B.idx  ServerPub.cpp.49D9DE30401951B4.idx  ServerPub.h.BA3A3806FD608CD8.idx  ServerTest.cpp.99696CF73C60B150.idx  TaskPacket.h.F0BD0B36F0B68701.idx  TavernaClub.h.0D32B123CF78D2AE.idx  TavernaSever.h.083DDF506AAF9E9A.idx  TavernaVisitor.cpp.123024AF44D5FA20.idx  ThreadPool.h.8E5F38BC3413EC2D.idx  main.cpp.770734BD7A89F784.idx
asynclog/: CMakeLists.txt  main.cpp
asynclog/include/: LogBuffer.h  LogFile.h  LogFlusher.h  LogPub.h  Logger.h
asynclog/src/: LogBuffer.cpp  LogFile.cpp  LogFlusher.cpp  LogPub.cpp  LogTest.cpp  Logger.cpp  main.cpp
server/: CMakeLists.txt  note.md
server/include/: ConnectionManager.h  EventHandler.h  HttpContext.h  HttpModule.h  Reactor.h  RequestBuffer.h  ServerPub.h  TaskPacket.h  ThreadPool.h
server/include/base/: Buffer.h
server/include/http/: HttpContext.h  HttpParser.h  HttpPub.h  HttpRouter.h  HttpServer.h
server/include/kv/: KVService.h
server/include/net/: Acceptor.h  Channel.h  EventLoop.h  EventTrigger.h  OutputChunk.h  TCPConnection.h  TCPServer.h  Timer.h
server/include/rpc/: RpcContext.h  RpcHttpManager.h  RpcParser.h  RpcProtocol.h  RpcPub.h  RpcServer.h  RpcService.h
server/src/: EventHandler.cpp  HttpContext.cpp  HttpModule.cpp  Reactor.cpp  Server.cpp  ServerPub.cpp  ServerTest.cpp
server/src/app/: HttpServer.cpp
server/src/http/: HttpContext.cpp  HttpParser.cpp  HttpPub.cpp  HttpRouter.cpp  HttpServer.cpp
server/src/kv/: KVService.cpp
server/src/net/: Acceptor.cpp  Channel.cpp  EventLoop.cpp  EventTrigger.cpp  OutputChunk.cpp  TCPConnection.cpp  TCPServer.cpp  Timer.cpp
server/src/rpc/: RpcContext.cpp  RpcParser.cpp  RpcServer.cpp  RpcService.cpp  需求辨析.md
sh_lib/: active_client.sh  half_http_packet_test.py  server_build_and_excute.sh  stage1_concurrency_test.sh  stage2_basic_http_test.sh  stage2_sanitizer_regression.sh  stage2_stress_test.sh
tool/: CMakeLists.txt
tool/src/: TavernaVisitor.cpp
